# get-lot-number-address

./: getLotNumberAddress.py  main.py  pyproject.toml
src/: filterSchools.py  getLotNumberAddress.py  trimAddress.py
